// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sqitch package dependencies with internal tag resolution [simple-w-tags/1st] 1`] = `
{
  "deps": {
    "/deploy/schema_myfirstapp.sql": [],
    "/deploy/table_products.sql": [
      "my-first:schema_myfirstapp",
      "my-first:table_users",
    ],
    "/deploy/table_users.sql": [
      "my-first:schema_myfirstapp",
    ],
  },
  "external": [],
  "resolved": [
    "schema_myfirstapp",
    "table_users",
    "schema_myfirstapp",
    "schema_myfirstapp",
    "table_users",
    "table_products",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies with internal tag resolution [simple-w-tags/2nd] 1`] = `
{
  "deps": {
    "/deploy/create_another_table.sql": [
      "my-second:create_table",
    ],
    "/deploy/create_schema.sql": [
      "my-first:@v1.0.0",
    ],
    "/deploy/create_table.sql": [
      "my-second:create_schema",
    ],
    "my-first:@v1.0.0": [],
  },
  "external": [
    "my-first:@v1.0.0",
    "my-first:@v1.0.0",
  ],
  "resolved": [
    "create_schema",
    "create_table",
    "create_schema",
    "create_table",
    "create_another_table",
  ],
  "resolvedTags": {
    "my-first:@v1.0.0": "my-first:table_users",
  },
}
`;

exports[`sqitch package dependencies with internal tag resolution [simple-w-tags/3rd] 1`] = `
{
  "deps": {
    "/deploy/create_schema.sql": [
      "my-first:@v1.1.0",
      "my-second:@v2.0.0",
    ],
    "/deploy/create_table.sql": [
      "my-third:@v2.0.0",
      "my-second:@v2.1.0",
    ],
    "my-first:@v1.1.0": [],
    "my-second:@v2.0.0": [],
    "my-second:@v2.1.0": [],
  },
  "external": [
    "my-first:@v1.1.0",
    "my-second:@v2.0.0",
    "my-second:@v2.1.0",
  ],
  "resolved": [
    "create_schema",
    "create_table",
  ],
  "resolvedTags": {
    "my-first:@v1.1.0": "my-first:table_products",
    "my-second:@v2.0.0": "my-second:create_table",
    "my-second:@v2.1.0": "my-second:create_another_table",
    "my-third:@v2.0.0": "my-third:create_schema",
  },
}
`;

exports[`stage fixture dependency resolution - internal tags resolves internal tags from plan only for unique-names 1`] = `
{
  "deps": {
    "/deploy/schemas/unique_names/procedures/generate_name.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/schema.sql": [
      "launchql-ext-default-roles:@0.0.5",
      "launchql-ext-defaults:defaults/public",
      "launchql-ext-verify:@0.1.0",
    ],
    "/deploy/schemas/unique_names/tables/words/fixtures/1589271124916_fixture.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/indexes/words_type_idx.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/table.sql": [
      "schemas/unique_names/schema",
    ],
    "launchql-ext-default-roles:@0.0.5": [],
    "launchql-ext-defaults:defaults/public": [],
    "launchql-ext-verify:@0.1.0": [],
  },
  "external": [
    "launchql-ext-default-roles:@0.0.5",
    "launchql-ext-defaults:defaults/public",
    "launchql-ext-verify:@0.1.0",
  ],
  "resolved": [
    "schemas/unique_names/schema",
    "schemas/unique_names/tables/words/table",
    "schemas/unique_names/procedures/generate_name",
    "schemas/unique_names/tables/words/fixtures/1589271124916_fixture",
    "schemas/unique_names/tables/words/indexes/words_type_idx",
  ],
  "resolvedTags": {
    "launchql-ext-default-roles:@0.0.5": "launchql-ext-default-roles:roles/administrator/role",
    "launchql-ext-verify:@0.1.0": "launchql-ext-verify:procedures/verify_view",
  },
}
`;

exports[`stage fixture dependency resolution - internal tags resolves internal tags from sql headers for unique-names 1`] = `
{
  "deps": {
    "/deploy/schemas/unique_names/procedures/generate_name.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/schema.sql": [],
    "/deploy/schemas/unique_names/tables/words/fixtures/1589271124916_fixture.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/indexes/words_type_idx.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/table.sql": [
      "schemas/unique_names/schema",
    ],
  },
  "external": [],
  "resolved": [
    "schemas/unique_names/schema",
    "schemas/unique_names/tables/words/table",
    "schemas/unique_names/tables/words/indexes/words_type_idx",
    "schemas/unique_names/tables/words/fixtures/1589271124916_fixture",
    "schemas/unique_names/procedures/generate_name",
  ],
  "resolvedTags": {},
}
`;
